// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateAnotherConfig 测试配置 1`] = `
Object {
  "port": 8080,
  "server": "http://localhost",
  "time": "2021",
}
`;

exports[`generateConfig 测试配置 1`] = `
Object {
  "port": 8080,
  "server": "http://localhost",
  "time": Any<Date>,
}
`;
